[tool.poetry]
name = "rlearn"
version = "0.1.0"
description = ""
authors = ["antonia.sistig <antonia.sistig@arcor.de>"]
readme = "README.md"
packages = [{include = "rlearn"}]

[tool.poetry.dependencies]
python = "^3.8"
mininet = "^2.3.0.dev6"
networkx = "^3.0"
matplotlib = "^3.6.3"
torch = "^1.13.1"
pydantic = "^1.10.4"
confuse = "^2.0.0"
pyvis = "^0.3.1"
ipython = "^8.8.0"
pyflann = "^1.6.14"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.poetry.source]
name = "proxy"
url = "www-proxy.fkie.fraunhofer.de:3128"
default = true
